--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
-.axis path, .axis line {
-fill: none;
-stroke: blue;
-shape-rendering: crispEdges;
+body {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.dot {
+  stroke: #000;
 }
